--- a/handson-ml-master/Chapter 3) Classification.ipynb
+++ b/handson-ml-master/Chapter 3) Classification.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "nbpresent": {
+     "id": "f39d7ee3-9ffe-452a-9b6a-af65bb4d71b7"
+    }
+   },
    "source": [
     "# Chapter 3. Classification \n",
     "\n",
@@ -11,9 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "74af2311-7148-4116-8447-84545d9bb21d"
+    }
    },
    "outputs": [],
    "source": [
@@ -50,7 +57,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "nbpresent": {
+     "id": "85eea110-f3fa-43b6-994e-923d15b001c6"
+    }
+   },
    "source": [
     "## MNIST DATA DOWNLOAD"
    ]
@@ -59,7 +70,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "f953f095-4876-4023-bad4-b3c003150189"
+    }
    },
    "outputs": [
     {
@@ -101,7 +115,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "931d96c6-682d-4894-970f-62a9319b9448"
+    }
    },
    "outputs": [],
    "source": [
@@ -114,7 +131,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "a8c689e3-b57c-47d3-b501-920d1dfe8d67"
+    }
    },
    "outputs": [],
    "source": [
@@ -125,7 +145,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "nbpresent": {
+     "id": "fb813263-9756-4ce1-a872-598b4d9362a9"
+    }
    },
    "outputs": [],
    "source": [
@@ -139,7 +162,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "67b89bbf-578c-4678-9ab3-1e71a54edf23"
+    }
    },
    "outputs": [
     {
@@ -172,7 +198,10 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "ceb6954e-ed8c-4c8f-81b8-ec07a30e1644"
+    }
    },
    "outputs": [
     {
@@ -192,7 +221,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "nbpresent": {
+     "id": "97f16b46-be0e-4493-b171-7de8f5ac598f"
+    }
+   },
    "source": [
     "## Mearsuring Accurcy using CV"
    ]
@@ -201,7 +234,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "67849156-7010-4319-b709-f2b9ff835182"
+    }
    },
    "outputs": [
     {
@@ -240,7 +276,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "nbpresent": {
+     "id": "36aa8690-34b5-436e-b402-888bdce9335b"
+    }
+   },
    "source": [
     "### Cross_val로 정답 확률 구하는 것도 좋지만, 한 쪽으로 class가 치우쳐져 있는 경우가 많아서 \n",
     "### 이걸로 잘 예측하고 있는 건지 확인하기 어렵다. 그래서 precision이 필요하다. \n",
@@ -255,7 +295,10 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "38fc6e27-2b48-464e-a52e-0970498a596e"
+    }
    },
    "outputs": [
     {
@@ -282,7 +325,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "228cbfb3-e23b-4c67-b9c1-6a3c36bb5d54"
+    }
    },
    "outputs": [
     {
@@ -304,7 +350,10 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "d7141d9e-fbf3-4df4-80be-fe378924b37b"
+    }
    },
    "outputs": [
     {
@@ -326,7 +375,10 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "688202bc-adf9-4c7c-bdec-5196046685c4"
+    }
    },
    "outputs": [
     {
@@ -348,7 +400,10 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "c7aee7b2-4efa-47a0-8a30-62817e688b7d"
+    }
    },
    "outputs": [
     {
@@ -369,7 +424,10 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "8c6165e6-e9ce-4427-85f0-b1043715651e"
+    }
    },
    "outputs": [],
    "source": [
@@ -380,7 +438,10 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "1355e14c-4e38-4c89-9cd3-02e6aa2a8285"
+    }
    },
    "outputs": [],
    "source": [
@@ -392,7 +453,10 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "f970cbee-5474-4441-bab3-6e0a8c682e6a"
+    }
    },
    "outputs": [],
    "source": [
@@ -404,7 +468,10 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "nbpresent": {
+     "id": "1c7c75ae-4b35-4191-8beb-27ae878d6cd0"
+    }
    },
    "outputs": [],
    "source": [
@@ -418,7 +485,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "nbpresent": {
+     "id": "1821d4d8-5b52-49c9-afc3-b5fb43c70a80"
+    }
+   },
    "source": [
     "### Threshold는 구했는데 이거 어디다 쓰는거지 무슨 의미?"
    ]
@@ -427,7 +498,10 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "65504256-50a6-4fa0-9719-a4a1a3e8406d"
+    }
    },
    "outputs": [
     {
@@ -450,7 +524,10 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "6f5b7354-238e-4ff3-b266-44c368154a21"
+    }
    },
    "outputs": [
     {
@@ -474,7 +551,10 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "7710893b-463b-4966-b908-a549f8e29eff"
+    }
    },
    "outputs": [
     {
@@ -496,7 +576,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "nbpresent": {
+     "id": "8f8eb2f2-9706-4480-8443-c83fe837612b"
+    }
    },
    "source": [
     "### The ROC Curve"
@@ -506,7 +589,10 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "64e2075b-a2be-4893-82f2-740b41cb1635"
+    }
    },
    "outputs": [],
    "source": [
@@ -519,7 +605,10 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "5f8d105f-39e8-4dd1-a249-36bc0c481c17"
+    }
    },
    "outputs": [
     {
@@ -541,7 +630,10 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "nbpresent": {
+     "id": "316725a3-af9f-4777-a066-2564e61d1235"
+    }
    },
    "outputs": [
     {
@@ -571,7 +663,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "nbpresent": {
+     "id": "795500ce-f168-47df-b5ef-757d5c3fe4ef"
+    }
    },
    "outputs": [],
    "source": []
@@ -595,6 +690,220 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.0"
+  },
+  "nbpresent": {
+   "slides": {
+    "078605da-843e-447e-9343-f5abcda6ddc8": {
+     "id": "078605da-843e-447e-9343-f5abcda6ddc8",
+     "prev": "e12b002f-791a-4009-b3cf-94fb3b3e5ec1",
+     "regions": {
+      "f872d25c-ac76-49f2-b27e-a8faa2bb7813": {
+       "attrs": {
+        "height": 0.8,
+        "width": 0.8,
+        "x": 0.1,
+        "y": 0.1
+       },
+       "content": {
+        "cell": "316725a3-af9f-4777-a066-2564e61d1235",
+        "part": "whole"
+       },
+       "id": "f872d25c-ac76-49f2-b27e-a8faa2bb7813"
+      }
+     }
+    },
+    "3664f32b-ee44-4ac4-aeae-5a7a05d63412": {
+     "id": "3664f32b-ee44-4ac4-aeae-5a7a05d63412",
+     "prev": null,
+     "regions": {
+      "fcb70179-14de-463c-9c54-f9deb60d05d6": {
+       "attrs": {
+        "height": 0.8,
+        "width": 0.8,
+        "x": 0.1,
+        "y": 0.1
+       },
+       "content": {
+        "cell": "f970cbee-5474-4441-bab3-6e0a8c682e6a",
+        "part": "whole"
+       },
+       "id": "fcb70179-14de-463c-9c54-f9deb60d05d6"
+      }
+     }
+    },
+    "45f885f5-96c5-4a91-9797-072ad24a16e3": {
+     "id": "45f885f5-96c5-4a91-9797-072ad24a16e3",
+     "prev": "c4e42081-03e7-46a8-9c5a-2c251e2b941a",
+     "regions": {
+      "3202c04d-b1c1-4e9c-ad1c-335a19cdd535": {
+       "attrs": {
+        "height": 0.8,
+        "width": 0.8,
+        "x": 0.1,
+        "y": 0.1
+       },
+       "content": {
+        "cell": "7710893b-463b-4966-b908-a549f8e29eff",
+        "part": "whole"
+       },
+       "id": "3202c04d-b1c1-4e9c-ad1c-335a19cdd535"
+      }
+     }
+    },
+    "5ec02cfb-44a9-4f30-9cc7-612645e357bb": {
+     "id": "5ec02cfb-44a9-4f30-9cc7-612645e357bb",
+     "prev": "ef5fa9e3-4aa9-4030-806d-a5ec618e23e0",
+     "regions": {
+      "319b868e-0ce8-404e-860c-9718a7f54890": {
+       "attrs": {
+        "height": 0.8,
+        "width": 0.8,
+        "x": 0.1,
+        "y": 0.1
+       },
+       "content": {
+        "cell": "65504256-50a6-4fa0-9719-a4a1a3e8406d",
+        "part": "whole"
+       },
+       "id": "319b868e-0ce8-404e-860c-9718a7f54890"
+      }
+     }
+    },
+    "b2484554-5d34-4b30-b3c2-ee453d2bac4b": {
+     "id": "b2484554-5d34-4b30-b3c2-ee453d2bac4b",
+     "prev": "45f885f5-96c5-4a91-9797-072ad24a16e3",
+     "regions": {
+      "db3ac6ac-3e2a-40a3-988b-982a3fbb3b54": {
+       "attrs": {
+        "height": 0.8,
+        "width": 0.8,
+        "x": 0.1,
+        "y": 0.1
+       },
+       "content": {
+        "cell": "8f8eb2f2-9706-4480-8443-c83fe837612b",
+        "part": "whole"
+       },
+       "id": "db3ac6ac-3e2a-40a3-988b-982a3fbb3b54"
+      }
+     }
+    },
+    "b3081e97-3e9c-49bb-be17-d16e44eeacac": {
+     "id": "b3081e97-3e9c-49bb-be17-d16e44eeacac",
+     "prev": "3664f32b-ee44-4ac4-aeae-5a7a05d63412",
+     "regions": {
+      "074e5689-7407-47a2-a134-8e4555c16a31": {
+       "attrs": {
+        "height": 0.8,
+        "width": 0.8,
+        "x": 0.1,
+        "y": 0.1
+       },
+       "content": {
+        "cell": "1c7c75ae-4b35-4191-8beb-27ae878d6cd0",
+        "part": "whole"
+       },
+       "id": "074e5689-7407-47a2-a134-8e4555c16a31"
+      }
+     }
+    },
+    "c4e42081-03e7-46a8-9c5a-2c251e2b941a": {
+     "id": "c4e42081-03e7-46a8-9c5a-2c251e2b941a",
+     "prev": "5ec02cfb-44a9-4f30-9cc7-612645e357bb",
+     "regions": {
+      "85073a77-be82-4590-aecb-7ed40a9320a0": {
+       "attrs": {
+        "height": 0.8,
+        "width": 0.8,
+        "x": 0.1,
+        "y": 0.1
+       },
+       "content": {
+        "cell": "6f5b7354-238e-4ff3-b266-44c368154a21",
+        "part": "whole"
+       },
+       "id": "85073a77-be82-4590-aecb-7ed40a9320a0"
+      }
+     }
+    },
+    "c6917406-f3bf-408b-b539-8c94a1643481": {
+     "id": "c6917406-f3bf-408b-b539-8c94a1643481",
+     "prev": "078605da-843e-447e-9343-f5abcda6ddc8",
+     "regions": {
+      "d0e6a46b-8123-48c1-a840-2c326cbb6d5e": {
+       "attrs": {
+        "height": 0.8,
+        "width": 0.8,
+        "x": 0.1,
+        "y": 0.1
+       },
+       "content": {
+        "cell": "795500ce-f168-47df-b5ef-757d5c3fe4ef",
+        "part": "whole"
+       },
+       "id": "d0e6a46b-8123-48c1-a840-2c326cbb6d5e"
+      }
+     }
+    },
+    "cd493b5b-9516-4d6f-ae0c-1115868cc2e8": {
+     "id": "cd493b5b-9516-4d6f-ae0c-1115868cc2e8",
+     "prev": "b2484554-5d34-4b30-b3c2-ee453d2bac4b",
+     "regions": {
+      "83700fa7-64f0-4114-aa29-332494c5a24c": {
+       "attrs": {
+        "height": 0.8,
+        "width": 0.8,
+        "x": 0.1,
+        "y": 0.1
+       },
+       "content": {
+        "cell": "64e2075b-a2be-4893-82f2-740b41cb1635",
+        "part": "whole"
+       },
+       "id": "83700fa7-64f0-4114-aa29-332494c5a24c"
+      }
+     }
+    },
+    "e12b002f-791a-4009-b3cf-94fb3b3e5ec1": {
+     "id": "e12b002f-791a-4009-b3cf-94fb3b3e5ec1",
+     "prev": "cd493b5b-9516-4d6f-ae0c-1115868cc2e8",
+     "regions": {
+      "a4a4f752-874a-48a2-985a-95e77addf700": {
+       "attrs": {
+        "height": 0.8,
+        "width": 0.8,
+        "x": 0.1,
+        "y": 0.1
+       },
+       "content": {
+        "cell": "5f8d105f-39e8-4dd1-a249-36bc0c481c17",
+        "part": "whole"
+       },
+       "id": "a4a4f752-874a-48a2-985a-95e77addf700"
+      }
+     }
+    },
+    "ef5fa9e3-4aa9-4030-806d-a5ec618e23e0": {
+     "id": "ef5fa9e3-4aa9-4030-806d-a5ec618e23e0",
+     "prev": "b3081e97-3e9c-49bb-be17-d16e44eeacac",
+     "regions": {
+      "c53e7c54-8c49-48ac-b089-d79a7e7d56d9": {
+       "attrs": {
+        "height": 0.8,
+        "width": 0.8,
+        "x": 0.1,
+        "y": 0.1
+       },
+       "content": {
+        "cell": "1821d4d8-5b52-49c9-afc3-b5fb43c70a80",
+        "part": "whole"
+       },
+       "id": "c53e7c54-8c49-48ac-b089-d79a7e7d56d9"
+      }
+     }
+    }
+   },
+   "themes": {}
   }
  },
  "nbformat": 4,
