--- a/handson-ml-master/05_support_vector_machines.ipynb
+++ b/handson-ml-master/05_support_vector_machines.ipynb
@@ -1842,7 +1842,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1856,7 +1856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2+"
+   "version": "3.5.2"
   },
   "nav_menu": {},
   "toc": {
