Using in Laptop

--- a/handson-ml-master/Chapter 4) Training models.ipynb
+++ b/handson-ml-master/Chapter 4) Training models.ipynb
@@ -29,7 +29,7 @@
     "np.random.seed(42)\n",
     "\n",
     "X = 2*np.random.rand(100,1)\n",
-    "y = 4+3*X+np.random.rand(100,1)\n"
+    "y = 4+3*X+np.random.rand(100,1)"
    ]
   },
   {
@@ -272,7 +272,7 @@
    "source": [
     "from sklearn.linear_model import SGDRegressor\n",
     "sgd_reg = SGDRegressor(n_iter = 50, alpha = 0.01, eta0 = 0.01)\n",
-    "sgd_reg.fit(X, y.ravel())  #scikit-learn 함수에서는 자동으로 X에 1 column 더해주나보네 "
+    "sgd_reg.fit(X, y.ravel())  #scikit-learn 함수에서는 자동으로 X에 1 column 더해주나보네"
    ]
   },
   {
@@ -411,7 +411,7 @@
     "lin_reg = LinearRegression()\n",
     "plot_learning_curves(lin_reg, X, y)\n",
     "plt.axis([0, 80, 0, 3])\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -580,7 +580,7 @@
     "             fontsize=16)\n",
     "plt.plot([0, epoch], [best_error, best_error], 'k:')\n",
     "plt.legend()\n",
-    "plt.show() \n"
+    "plt.show()"
    ]
   },
   {
@@ -847,7 +847,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -860,7 +862,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -871,5 +873,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
