--- a/handson-ml-master/02_end_to_end_machine_learning_project.ipynb
+++ b/handson-ml-master/02_end_to_end_machine_learning_project.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -255,19 +255,92 @@
        "</div>"
       ],
       "text/plain": [
-       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
-       "0    -122.23     37.88                41.0        880.0           129.0   \n",
-       "1    -122.22     37.86                21.0       7099.0          1106.0   \n",
-       "2    -122.24     37.85                52.0       1467.0           190.0   \n",
-       "3    -122.25     37.85                52.0       1274.0           235.0   \n",
-       "4    -122.25     37.85                52.0       1627.0           280.0   \n",
-       "\n",
-       "   population  households  median_income  median_house_value ocean_proximity  \n",
-       "0       322.0       126.0         8.3252            452600.0        NEAR BAY  \n",
-       "1      2401.0      1138.0         8.3014            358500.0        NEAR BAY  \n",
-       "2       496.0       177.0         7.2574            352100.0        NEAR BAY  \n",
-       "3       558.0       219.0         5.6431            341300.0        NEAR BAY  \n",
-       "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-122.23</td>\n",
+       "      <td>37.88</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>880.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>8.3252</td>\n",
+       "      <td>452600.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-122.22</td>\n",
+       "      <td>37.86</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>7099.0</td>\n",
+       "      <td>1106.0</td>\n",
+       "      <td>2401.0</td>\n",
+       "      <td>1138.0</td>\n",
+       "      <td>8.3014</td>\n",
+       "      <td>358500.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-122.24</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>496.0</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>7.2574</td>\n",
+       "      <td>352100.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1274.0</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>558.0</td>\n",
+       "      <td>219.0</td>\n",
+       "      <td>5.6431</td>\n",
+       "      <td>341300.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1627.0</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>259.0</td>\n",
+       "      <td>3.8462</td>\n",
+       "      <td>342200.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ]
      },
      "execution_count": 7,
@@ -293,21 +366,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 20640 entries, 0 to 20639\n",
-      "Data columns (total 10 columns):\n",
-      "longitude             20640 non-null float64\n",
-      "latitude              20640 non-null float64\n",
-      "housing_median_age    20640 non-null float64\n",
-      "total_rooms           20640 non-null float64\n",
-      "total_bedrooms        20433 non-null float64\n",
-      "population            20640 non-null float64\n",
-      "households            20640 non-null float64\n",
-      "median_income         20640 non-null float64\n",
-      "median_house_value    20640 non-null float64\n",
-      "ocean_proximity       20640 non-null object\n",
-      "dtypes: float64(9), object(1)\n",
-      "memory usage: 1.6+ MB\n"
+      "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 20640 entries, 0 to 20639\nData columns (total 10 columns):\nlongitude             20640 non-null float64\nlatitude              20640 non-null float64\nhousing_median_age    20640 non-null float64\ntotal_rooms           20640 non-null float64\ntotal_bedrooms        20433 non-null float64\npopulation            20640 non-null float64\nhouseholds            20640 non-null float64\nmedian_income         20640 non-null float64\nmedian_house_value    20640 non-null float64\nocean_proximity       20640 non-null object\ndtypes: float64(9), object(1)\nmemory usage: 1.6+ MB\n"
      ]
     }
    ],
@@ -2608,7 +2667,7 @@
     "        (\"num_pipeline\", num_pipeline),\n",
     "        (\"cat_pipeline\", cat_pipeline),\n",
     "\n",
-    "    ])\n"
+    "    ])"
    ]
   },
   {
@@ -3327,7 +3386,7 @@
     "X_test = strat_test_set.drop('median_house_value', axis = 1)\n",
     "y_test = strat_test_set['median_house_value'].copy()\n",
     "\n",
-    "X_test_prepared = preparation_pipeline.transform(X_test) "
+    "X_test_prepared = preparation_pipeline.transform(X_test)"
    ]
   },
   {
@@ -3441,7 +3500,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -3450,7 +3511,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -4619,7 +4682,9 @@
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -4632,7 +4697,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -4649,7 +4714,7 @@
    "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
-   "threshold": 6,
+   "threshold": 6.0,
    "toc_cell": false,
    "toc_section_display": "block",
    "toc_window_display": false
