--- a/handson-ml-master/07_ensemble_learning_and_random_forests.ipynb
+++ b/handson-ml-master/07_ensemble_learning_and_random_forests.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -280,7 +280,7 @@
     "    x1s = np.linspace(axes[0], axes[1], 100)\n",
     "    x2s = np.linspace(axes[2], axes[3], 100)\n",
     "    x1, x2 = np.meshgrid(x1s, x2s)\n",
-    "    X_new = np.c_[x1.ravel(), x2.ravel()]\n",
+    "    X_new = np.c_[x1.ravel(), x2.ra b bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbvel()]\n",
     "    y_pred = clf.predict(X_new).reshape(x1.shape)\n",
     "    custom_cmap = ListedColormap(['#fafab0','#9898ff','#a0faa0'])\n",
     "    plt.contourf(x1, x2, y_pred, alpha=0.3, cmap=custom_cmap, linewidth=10)\n",
@@ -1206,7 +1206,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1220,7 +1220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2+"
+   "version": "3.5.2"
   },
   "nav_menu": {
    "height": "252px",
